force-app/main/default/objects/Contact_Role__c/fields/is_primary_workplace__c.field-meta.xml
<CustomField>
    <fullName>is_primary_workplace__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Workplace</label>
    <type>Checkbox</type>
</CustomField>