force-app/main/default/objects/Contact_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Position/Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Officer</fullName>
            </value>
            <value>
                <fullName>Assistant Editor</fullName>
            </value>
            <value>
                <fullName>Associate member society - Delegate</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>GroupAdmin</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Acting President</fullName>
                <isActive>false</isActive>
                <label>Acting President</label>
            </value>
            <value>
                <fullName>Advocate</fullName>
                <isActive>false</isActive>
                <label>Advocate</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <isActive>false</isActive>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
                <isActive>false</isActive>
                <label>Co-Chair</label>
            </value>
            <value>
                <fullName>Collaborator</fullName>
                <isActive>false</isActive>
                <label>Collaborator</label>
            </value>
            <value>
                <fullName>Coordinator</fullName>
                <isActive>false</isActive>
                <label>Coordinator</label>
            </value>
            <value>
                <fullName>Delegate</fullName>
                <isActive>false</isActive>
                <label>Delegate</label>
            </value>
            <value>
                <fullName>Director</fullName>
                <isActive>false</isActive>
                <label>Director</label>
            </value>
            <value>
                <fullName>Exectuive Director</fullName>
                <isActive>false</isActive>
                <label>Exectuive Director</label>
            </value>
            <value>
                <fullName>Executive</fullName>
                <isActive>false</isActive>
                <label>Executive</label>
            </value>
            <value>
                <fullName>Fellow</fullName>
                <isActive>false</isActive>
                <label>Fellow</label>
            </value>
            <value>
                <fullName>Industry - Main Contact</fullName>
                <isActive>false</isActive>
                <label>Industry - Main Contact</label>
            </value>
            <value>
                <fullName>Industry - NPO Contact</fullName>
                <isActive>false</isActive>
                <label>Industry - NPO Contact</label>
            </value>
            <value>
                <fullName>Industry - contact</fullName>
                <isActive>false</isActive>
                <label>Industry - contact</label>
            </value>
            <value>
                <fullName>Initiator</fullName>
                <isActive>false</isActive>
                <label>Initiator</label>
            </value>
            <value>
                <fullName>Institution Role1</fullName>
                <isActive>false</isActive>
                <label>Institution Role1</label>
            </value>
            <value>
                <fullName>Institution Role2</fullName>
                <isActive>false</isActive>
                <label>Institution Role2</label>
            </value>
            <value>
                <fullName>Institution Role3</fullName>
                <isActive>false</isActive>
                <label>Institution Role3</label>
            </value>
            <value>
                <fullName>Institutional Delegate</fullName>
                <isActive>false</isActive>
                <label>Institutional Delegate</label>
            </value>
            <value>
                <fullName>Observer</fullName>
                <isActive>false</isActive>
                <label>Observer</label>
            </value>
            <value>
                <fullName>Patient</fullName>
                <isActive>false</isActive>
                <label>Patient</label>
            </value>
            <value>
                <fullName>President</fullName>
                <isActive>false</isActive>
                <label>President</label>
            </value>
            <value>
                <fullName>Representative</fullName>
                <isActive>false</isActive>
                <label>Representative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>