force-app/main/default/objects/Contact_Role__c/recordTypes/Department.recordType-meta.xml
<RecordType>
    <fullName>Department</fullName>
    <active>true</active>
    <label>Department</label>
</RecordType>