force-app/main/default/objects/Contact_Role__c/recordTypes/Industry_Partner.recordType-meta.xml
<RecordType>
    <fullName>Industry_Partner</fullName>
    <active>true</active>
    <label>Industry Partner</label>
</RecordType>