force-app/main/default/objects/Contact_Role__c/recordTypes/Institutions.recordType-meta.xml
<RecordType>
    <fullName>Institutions</fullName>
    <active>true</active>
    <label>Institutions</label>
</RecordType>