force-app/main/default/objects/Contact_Role__c/recordTypes/National_Society.recordType-meta.xml
<RecordType>
    <fullName>National_Society</fullName>
    <active>true</active>
    <label>National Society</label>
</RecordType>