force-app/main/default/objects/Contact_Role__c/recordTypes/Working_Group.recordType-meta.xml
<RecordType>
    <fullName>Working_Group</fullName>
    <active>true</active>
    <label>Working Group</label>
</RecordType>