force-app/main/default/objects/Contact_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Role__c</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Hospital__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>